@@ -905,8 +905,12 @@ static bool shouldConvertInvalidURLsToBlank()
 
 static bool shouldRequireUserGestureToLoadVideo()
 {
+#if PLATFORM(IOS)
     static bool shouldRequireUserGestureToLoadVideo = dyld_get_program_sdk_version() >= DYLD_IOS_VERSION_10_0;
     return shouldRequireUserGestureToLoadVideo;
+#else
+    return true;
+#endif
 }
 
 #if ENABLE(GAMEPAD)
