@@ -1,3 +1,11 @@
+2016-10-11  Daniel Bates  <dabates@apple.com>
+
+        Attempt to fix the Apple Internal Mac build following r207159
+        (https://bugs.webkit.org/show_bug.cgi?id=163244)
+
+        * UIProcess/API/Cocoa/WKWebView.mm:
+        (shouldRequireUserGestureToLoadVideo):
+
 2016-10-11  Anders Carlsson  <andersca@apple.com>
 
         Clean up WebPageGroup somewhat
