@@ -1,5 +1,13 @@
 2016-10-11  Daniel Bates  <dabates@apple.com>
 
+        Attempt to fix the Apple Internal Mac build following r207159
+        (https://bugs.webkit.org/show_bug.cgi?id=163244)
+
+        * WebView/WebView.mm:
+        (shouldRequireUserGestureToLoadVideo):
+
+2016-10-11  Daniel Bates  <dabates@apple.com>
+
         REGRESSION (r198251): -[UIWebView mediaPlaybackRequiresUserAction] defaults to NO
         https://bugs.webkit.org/show_bug.cgi?id=163259
         <rdar://problem/28680515>
